# yacinetest

./: .env.example  .gitignore  README.md  config.py  credentials.txt  db.py  index.html  matching.py  mluser.py  package-lock.json  package.json  requirements.txt  runtime.py  tsconfig.json  vite.config.mjs
__pycache__/: mluser.cpython-312.pyc.2110343150800  mluser.cpython-312.pyc.2510639692976
src/: App.svelte  app.css  main.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: main.rs
tests/: test_config.py  test_smoke.py
