[package]
name = "mluser-desktop"
version = "0.1.0"
description = "MLUser Desktop"
authors = ["you"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
base64 = "0.22"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
strip = true
